nas: xorg-server is the only provider of X11-SERVER

--- a/audio-drivers/nas/HISTORY
+++ b/audio-drivers/nas/HISTORY
@@ -1,5 +1,6 @@
 2008-03-18 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Switch X11-SERVER to the one and only xorg-server
+	* PRE_BUILD, BUILD: xorg-server is the only provider of X11-SERVER
 
 2007-04-09 Arjan Bouter <abouter@sourcemage.org
 	* DETAILS: wrapped description line
