--- a/kde4/HISTORY
+++ b/kde4/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* KDE_DEPENDS: xorg-server is the only X11-SERVER
+
 2007-10-19 Treeve Jelbert <treeve@sourcemage.org>
 	* default_final, default_post_remove: added
 	  don't set XDG_DATA_DIRS, this is now done by strigi
@@ -39,3 +42,4 @@
 	  delete user specific code, not needed here
 	  make KDE4DIR persistent
 	* KDE_DEPENDS: add pkgconfig
+
