--- a/graphics/graphicsmagick/HISTORY
+++ b/graphics/graphicsmagick/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-09-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.1.10
 	  update snapshot to 20070918
