--- a/latex/tetex/HISTORY
+++ b/latex/tetex/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2006-07-05 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: removed UPDATED
 	* DEPENDS: fixed typo in libpng optional depends, X11-LIBS provider
