--- a/shell-term-fm/mc/HISTORY
+++ b/shell-term-fm/mc/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-03-13 Ladislav Hagara <hgr@vabo.cz>
 	* PRE_BUILD, mc-4.6.1-bash-all.patch: added patch from Gentoo
 	  http://savannah.gnu.org/bugs/?18136
