--- a/video/mplayer/HISTORY
+++ b/video/mplayer/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-10-18 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: removed the MPLAYER_SVN check around the live dependency,
 	  both versions use the new flags now, moved polypaudio
