gst-plugins-good: X11-LIBS to the one and only xorg-libs

--- a/video-libs/gst-plugins-good/HISTORY
+++ b/video-libs/gst-plugins-good/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-09-22 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: ascii -> ASCII in text description
 	* PRE_SUB_DEPENDS, SUB_DEPENDS: Allow e-emotion to depend on gst-plugins-good
