--- a/video-libs/xine-lib/HISTORY
+++ b/video-libs/xine-lib/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-10-16 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* DEPENDS: added optional_depends on pulseaudio
 
