--- a/x11-toolkits/fox/HISTORY
+++ b/x11-toolkits/fox/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-08-26 Ladislav Hagara <hgr@vabo.cz>
 	* DEPENDS: optional_depends libxft only if xorg-modular
 
