--- a/editors/vim/HISTORY
+++ b/editors/vim/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-05-16 Arwed v. Merkatz <v.merkatz@gmx.net>
 	* PRE_BUILD, new_changelog_entry.patch: fix :NewChangelogEntry
 	  command
