--- a/kde-apps/kid3/HISTORY
+++ b/kde-apps/kid3/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-09-08 Remko van der Vossen <wich@stack.nl>
 	* PRE_BUILD, BUILD, INSTALL: kid3 uses a new way to support a qt-only
 	  build
