--- a/php-pear/php/HISTORY
+++ b/php-pear/php/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-08-30 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 5.2.4, SECURITY_PATCH=5
 
