php4: X11-LIBS to the one and only xorg-libs

--- a/php-pear/php4/HISTORY
+++ b/php-pear/php4/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-05-05 George Sherwood <george@beernabeer.com>
 	* DETAILS: updated spell to 4.4.7
 	  SECURITY_PATCH++. Bug #13758
