--- a/php-pear/php-dev/HISTORY
+++ b/php-pear/php-dev/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-06-10 George Sherwood <george@beernabeer.com>
 	* DEPENDS: Added from php spell.  Added depends icu.
 	* DETAILS: Updated to version 6.  Added autoupdate.
