--- a/x11/gkrellm2/HISTORY
+++ b/x11/gkrellm2/HISTORY
@@ -1,3 +1,6 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+
 2007-07-20 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
 	* DETAILS: updated spell to 2.3.0
 	  hash changed due to tarball regen by author, another
