--- a/gnome2-libs/libxklavier/HISTORY
+++ b/gnome2-libs/libxklavier/HISTORY
@@ -1,5 +1,5 @@
 2008-03-18 Eric Sandall <sandalle@sourcemage.org>
-	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+	* DEPENDS, BUILD: Switch X11-LIBS to the one and only xorg-libs
 
 2007-09-06 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated VERSION to 3.3
