--- a/libs/sdl/HISTORY
+++ b/libs/sdl/HISTORY
@@ -1,5 +1,6 @@
 2008-03-18 Eric Sandall <sandalle@sourcemage.org>
-	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+	* SUB_DEPENDS, PRE_SUB_DEPENDS, DEPENDS: Switch X11-LIBS to the one and
+	  only xorg-libs
 
 2007-07-12 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* DETAILS: converted to upstream signature checking
