--- a/audio-creation/qsynth/HISTORY
+++ b/audio-creation/qsynth/HISTORY
@@ -1,3 +1,7 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: We're all one big happy xorg-modular, no need to check
+	  anymore
+
 2007-09-15 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Updated to 0.3.1.
 	* CONFIGURE: Added, query about system tray option.
