--- a/audio-creation/rosegarden/HISTORY
+++ b/audio-creation/rosegarden/HISTORY
@@ -1,3 +1,7 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: We're all one big happy xorg-modular, no need to check
+	  anymore
+
 2007-09-11 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS: Moved SOURCE_HASH to inside the VCS conditional.
 
