--- a/audio-soft/qjackctl/HISTORY
+++ b/audio-soft/qjackctl/HISTORY
@@ -1,3 +1,7 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: We're all one big happy xorg-modular, no need to check
+	  anymore
+
 2007-10-20 Juuso Alasuutari <iuso@sourcemage.org>
 	* DETAILS, DEPENDS, PRE_BUILD: Added cvs version.
 	* PREPARE: Added, for cvs version query.
