--- a/chat-im/gajim/HISTORY
+++ b/chat-im/gajim/HISTORY
@@ -1,3 +1,7 @@
+2008-03-18 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: We're all one big happy xorg-modular, no need to check
+	  anymore
+
 2007-09-25 Pol Vinogradov <vin.public@gmail.com>
 	* DEPENDS: added libxscrnsaver as optional if xorg is modular
 	  and dbus-python
@@ -73,3 +77,4 @@
 
 2005-04-15 George Sherwood <george@beernabeer.com>
 	* DETAILS, DEPENDS, HISTORY: created spell
+
