patchage: New spell, a modular patch bay for audio and MIDI systems.

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@
 	  audio applications.
 	* graphics-libs/flowcanvas: New spell, a Gtkmm/Gnomecanvasmm
 	  widget for finite state automata diagrams.
+	* audio-soft/patchage: New spell, a modular patch bay for audio
+	  and MIDI systems.
 
 2008-03-17 Ethan Grammatikidis <eekee57@fastmail.fm>
 	* python-pypi/boodler: new spell, a tool for creating
