--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,10 @@
 	  widget for finite state automata diagrams.
 	* audio-soft/patchage: New spell, a modular patch bay for audio
 	  and MIDI systems.
+	* gnome2-libs/flowcanvas: Whoops! There was a flowcanvas spell in
+	  here already. I had put it there myself, and it was very old,
+	  so I just removed it. So flowcanvas has today been bumped and
+	  moved to graphics-libs (which is more appropriate anyway).
 
 2008-03-17 Ethan Grammatikidis <eekee57@fastmail.fm>
 	* python-pypi/boodler: new spell, a tool for creating
