--- a/audio-creation/vkeybd/HISTORY
+++ b/audio-creation/vkeybd/HISTORY
@@ -1,5 +1,7 @@
 2008-03-18 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Switch X11-LIBS to the one and only xorg-libs
+	  We're all one big happy xorg-modular, no need to check
+	  anymore
 
 2006-08-11 Juuso Alasuutari <iuso@sourcemage.org>
 	* DEPENDS: Added depends X11-LIBS.
@@ -8,3 +10,4 @@
 2006-08-10 Juuso Alasuutari <iuso@sourcemage.org>
 	* BUILD, CONFIGURE, DEPENDS, DETAILS, HISTORY, 
 	  INSTALL, PRE_BUILD: created spell
+
