--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,6 @@
+2013-03-19 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.6.13
+
 2013-02-02 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.6.12; SECURITY_PATCH++
 	* CONFLICTS, CONFIGURE, DEPENDS: both samba and tdb/talloc install
