--- a/shell-term-fm/bash/HISTORY
+++ b/shell-term-fm/bash/HISTORY
@@ -1,3 +1,9 @@
+2013-05-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: SECURITY_PATCH++, introduce variable BASH_PATCHLEVEL
+	* PRE_BUILD: use variable BASH_PATCHLEVEL to determine which
+	  patches to apply
+	* patches/bash42-{038..045}: added 4.2 patches
+
 2012-10-22 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: SECURITY_PATCH=1, CVE-2012-3410
 	* PRE_BUILD, patches/bash42-{001..037}: added 4.2 patches
