--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,6 +1,9 @@
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
+2013-06-01 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD: fix nouveau
+
 2013-05-30 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS: 2.4.45
 
