--- a/disk/lilo/HISTORY
+++ b/disk/lilo/HISTORY
@@ -1,3 +1,7 @@
+2013-08-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 24.0
+	* PRE_BUILD, 0001-fix-failure-during-install.patch: fix failure during install
+
 2011-09-26 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: converted to upstream signature checking
 	* 1FE1B08B.gpg: added gpg keyring
