--- a/net/samba/HISTORY
+++ b/net/samba/HISTORY
@@ -1,3 +1,6 @@
+2013-06-19 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 3.6.16
+
 2013-03-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 3.6.13
 
