--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,6 +1,9 @@
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
+2013-07-03 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 2.4.46
+
 2013-06-01 Treeve Jelbert <treeve@sourcemage.org>
 	* BUILD: fix nouveau
 
