--- a/libs/libusbx/HISTORY
+++ b/libs/libusbx/HISTORY
@@ -1,3 +1,6 @@
+2013-07-22 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.0.16
+
 2013-07-01 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 1.0.16-rc1
 
