utils/xicc: new spell, a tool for setting the X server's _ICC_PROFILE property

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,10 @@
 	* science-libs/avogadrolibs: new spell chemistry
 	* science/avogadroapp: new spell chemistry
 
+2013-07-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* utils/xicc: new spell, a tool for setting the _ICC_PROFILE
+	  property of the X server
+
 2013-07-18 Vlad Glagolev <stealth@sourcemage.org>
 	* apache.gpg: added 9088F565 public key (William A. Rowe, Jr.
 	  <wrowe@rowe-clan.net>); cleaned and minimized keyring
