--- a/xorg-util/makedepend/HISTORY
+++ b/xorg-util/makedepend/HISTORY
@@ -1,3 +1,6 @@
+2013-07-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.5
+
 2012-03-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.4
 
