--- a/devel/git/HISTORY
+++ b/devel/git/HISTORY
@@ -1,3 +1,6 @@
+2013-07-23 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.8.3.4
+
 2013-06-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.8.3.1
 
