--- a/graphics-libs/opencv/HISTORY
+++ b/graphics-libs/opencv/HISTORY
@@ -1,3 +1,6 @@
+2013-07-23 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: version 2.4.6.1
+
 2013-04-06 Treeve Jelbert <treeve@sourcemage.org> 
 	* DETAILS: version 2.4.5
 	  new url at github
