--- a/science/hdf5/HISTORY
+++ b/science/hdf5/HISTORY
@@ -1,3 +1,6 @@
+2013-07-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.8.11
+
 2012-05-06 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.8.8
 
