--- a/graphics-libs/freeglut/HISTORY
+++ b/graphics-libs/freeglut/HISTORY
@@ -1,3 +1,6 @@
+2013-07-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS:  version 2.8.1
+
 2012-01-26 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.8.0
 
