--- a/graphics-libs/glew/HISTORY
+++ b/graphics-libs/glew/HISTORY
@@ -1,3 +1,6 @@
+2013-07-23 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.10.0
+
 2012-09-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.9.0
 
