--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-07-09 Treeve Jelbert <treeve@sourcemage.org>
 	* science-libs/molequeue: new spell chemistry
 	* science-libs/avogadrolibs: new spell chemistry
+	* science/avogadroapp: new spell chemistry
 
 2013-07-18 Vlad Glagolev <stealth@sourcemage.org>
 	* apache.gpg: added 9088F565 public key (William A. Rowe, Jr.
