--- a/libs/openbabel/HISTORY
+++ b/libs/openbabel/HISTORY
@@ -1,3 +1,6 @@
+2013-07-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: eigen2 => EIGEN
+
 2013-02-13 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.3.2 (stable and devel)
 
