--- a/audio-soft/media-player-info/HISTORY
+++ b/audio-soft/media-player-info/HISTORY
@@ -1,3 +1,7 @@
+2013-07-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 21
+	* DEPENDS: add pkgconfig, python3
+
 2012-06-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 17
 
