--- a/devel/pkgconfig/HISTORY
+++ b/devel/pkgconfig/HISTORY
@@ -1,3 +1,6 @@
+2013-07-24 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.28
+
 2012-09-14 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.27.1
 
