--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2013-07-24 Eric Sandall <sandalle@sourcemage.org>
+	* sc2-login.diff: Updated to apply cleanly to 1.6
+
 2013-07-19 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.6
 	* DEPENDS: openssl removed
