--- a/xorg-app/rgb/HISTORY
+++ b/xorg-app/rgb/HISTORY
@@ -1,3 +1,6 @@
+2013-07-25  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.5
+
 2010-10-07  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.0.4
 
