--- a/shell-term-fm/mksh/HISTORY
+++ b/shell-term-fm/mksh/HISTORY
@@ -1,3 +1,6 @@
+2013-07-25 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to R47
+
 2013-05-12 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: corrected description for R46 release
 
