--- a/crypto/gnupg/HISTORY
+++ b/crypto/gnupg/HISTORY
@@ -1,3 +1,6 @@
+2013-07-25 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.4.14, SECURITY_PATCH=8
+
 2012-12-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.13
 
