libgcrypt 1.5.3, SECURITY_PATCH=1

--- a/crypto/libgcrypt/HISTORY
+++ b/crypto/libgcrypt/HISTORY
@@ -1,3 +1,6 @@
+2013-07-25 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.5.3, SECURITY_PATCH=1
+
 2013-05-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.5.2
 
