--- a/libs/libxml2/HISTORY
+++ b/libs/libxml2/HISTORY
@@ -1,3 +1,7 @@
+2013-07-25 Treeve Jelbert <treeve@sourcemage.org>
+	* SUB_DEPENDS, PRE_SUB_DEPENDS: adjust to python3
+	* BUILD: added, fix detection of python3
+
 2013-05-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.9.1; SECURITY_PATCH++ (CVE-2013-1969)
 	* DEPENDS: switched to PYTHON (python3 is supported now)
