--- a/mail/sendmail/HISTORY
+++ b/mail/sendmail/HISTORY
@@ -1,3 +1,6 @@
+2013-07-26 Vlad Glagolev <stealth@sourcemage.org>
+	* sendmail.gpg: moved to section
+
 2012-12-09 Vlad Glagolev <stealth@sourcemage.org>
 	* CONFLICTS: added msmtp
 
