libmilter: new spell, mail filter support library for sendmail

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 2013-07-26 Vlad Glagolev <stealth@sourcemage.org>
 	* mail/sendmail.gpg: moved from sendmail spell, added public key 5207CAD3
 	  (Sendmail Signing Key/2013 <sendmail@Sendmail.ORG>)
+	* mail/libmilter: new spell, mail filter support library for sendmail
 
 2013-07-09 Treeve Jelbert <treeve@sourcemage.org>
 	* science-libs/molequeue: new spell chemistry
