--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2013-07-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* info/patches/maintenance_patches_3/patch-3.10.3: added
+	* latest_defaults: version 3.10.3
+
 2013-07-22 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/patches/maintenance_patches_3/patch-3.10.2: added
 	* latest_defaults: version 3.10.2
