--- a/graphics/darktable/HISTORY
+++ b/graphics/darktable/HISTORY
@@ -1,3 +1,9 @@
+2013-07-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: remove BUILD_SLIDESHOW=off from OPTS
+	* PRE_BUILD, wb_presets_nx100_liliput_plus.patch: add support
+	  for the nx100 liliput plus as does upstream in their ubuntu
+	  ppa
+
 2013-06-26 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.2.2
 
