udev - provides UDEV - prepare for future eudev

--- a/disk/udev/HISTORY
+++ b/disk/udev/HISTORY
@@ -1,3 +1,7 @@
+2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
+	* CONFLICTS: add eudev
+	* PROVIDES: added
+
 2012-02-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: renewed source url; temporary switch to sha512sum
 	* kay.gpg: removed jpeg photo
