--- a/libs/upower/HISTORY
+++ b/libs/upower/HISTORY
@@ -1,3 +1,6 @@
+2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: udev => UDEV
+
 2013-03-20 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.9.20
 
