--- a/libs/libdrm/HISTORY
+++ b/libs/libdrm/HISTORY
@@ -1,3 +1,6 @@
+2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: udev => UDEV
+
 2013-07-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 2.4.46
 
