--- a/xorg-driver/xf86-video-intel/HISTORY
+++ b/xorg-driver/xf86-video-intel/HISTORY
@@ -1,3 +1,6 @@
+2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: udev => UDEV
+
 2013-01-16 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 2.20.18
 
