--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: udev => UDEV
+
 2013-06-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 1.14.2
 
