--- a/xorg-driver/xf86-input-evdev/HISTORY
+++ b/xorg-driver/xf86-input-evdev/HISTORY
@@ -1,3 +1,6 @@
+2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: add optional UDEV
+
 2013-07-11 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.8.1
 
