init.d - depends UDEV

--- a/smgl/init.d/HISTORY
+++ b/smgl/init.d/HISTORY
@@ -1,3 +1,6 @@
+2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
+	* DEPENDS: udev => udev
+
 2012-06-07 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: make udev check for linux 3.x more robust
 
