--- a/graphics/libgphoto2/HISTORY
+++ b/graphics/libgphoto2/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-05-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.5.2
 
