--- a/qt5/qtsystems/HISTORY
+++ b/qt5/qtsystems/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-09-01  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 5.0.0-beta1
 	  spell created
