--- a/xorg-xserver/xorg-server/HISTORY
+++ b/xorg-xserver/xorg-server/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-09-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.8.2 (latest in 1.8 branch)
 
