--- a/xorg-driver/xf86-video-intel/HISTORY
+++ b/xorg-driver/xf86-video-intel/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2011-01-13 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: corrected dependencies
 
