--- a/xorg-driver/xf86-input-wacom/HISTORY
+++ b/xorg-driver/xf86-input-wacom/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-02-22 Robin Cook <rcook@wyrms.net>
 	* DETAILS: updated to 0.19.0
 
