thunar - change depends udev  -> UDEV

--- a/xfce/thunar/HISTORY
+++ b/xfce/thunar/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-06-14 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.6.3
 	  SOURCE matches upstream posted SHA1
