--- a/xfce-plugins/thunar-volman/HISTORY
+++ b/xfce-plugins/thunar-volman/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-04-29 Ismael Luceno <ismael@sourcemage.org>
 	* DETAILS: updated spell to 0.8.0
 
