--- a/x11/colord/HISTORY
+++ b/x11/colord/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-10-06 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 0.1.22
 	  switched to upstream GPG verification
