deprecate x11-toolkits/qt-embedded

--- a/x11-toolkits/qt-embedded/HISTORY
+++ b/x11-toolkits/qt-embedded/HISTORY
@@ -1,60 +1,4 @@
-2011-10-14 Bor Kraljič <pyrobor@ver.si>
-	* DETAILS: fixed long description wrap (scripted)
-
-2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
-	* DEPENDS: changed dependency on g++ to dependency on gcc with
-	  sub-depends on CXX (scripted)
-
-2010-11-03 Ladislav Hagara <hgr@vabo.cz>
-	* DEPENDS: jpeg -> JPEG
-
-2010-04-06 Philippe "Puppet_Master" Caseiro  <puppetmaster@sourcemage.org>
-	* DEPENDS: updated mysql dependency to MYSQL provider
-
-2008-10-12 Treeve Jelbert <treeve@sourcemage.org>
-	* DEPENDS: firebird has moved
-
-2007-06-17 Treeve Jelbert <treeve@sourcemage.org>
-	* DETAILS: version 3.3.8
-
-2006-09-21 Juuso Alasuutari <iuso@sourcemage.org>
-	* PROVIDES: [automated] Fixed invalid entries.
-
-2006-08-25 Anton Brondz <dinolinux@sourcemage.org>
-	* DETAILS: updated to 3.3.6, corrected WEB_SITE
-
-2006-06-28 Eric Sandall <sandalle@sourcemage.org>
-	* DETAILS: Removed BUILD_API=2, set grimoire-wide
-
-2006-06-25 George Sherwood <george@beernabeer.com>
-	* DEPENDS: Changed to CUPS from cups
-
-2006-03-12 Karsten Behrmann <BearPerson@sourcemage.org>
-	* DETAILS: (automated) Add KEYWORDS
-
-2005-11-29 Seth Woolley <seth@tautology.org>
-	* DETAILS: MD5 -> SHA512
-
-2005-01-30 Arjan Bouter <abouter@sourcemage.org>
-	* BUILD: spell_installed -> spell_ok conversion
-
-2004-12-18 Eric Sandall <sandalle@sourcemage.org>
-	* DETAILS: Updated UPDATED
-	* INSTALL: Create a libqte-mt link
-
-2004-12-17 Eric Sandall <sandalle@sourcemage.org>
-	* DETAILS: Updated UPDATED
-	* INSTALL: Modified for libqte, not libqt-mt
-
-2004-12-16 Eric Sandall <sandalle@sourcemage.org>
-	* Branched from qt-x11
-	* DETAILS: Renamed to qt-embedded
-	  Use $SPELL in SOURCE and SOURCE_DIRECTORY
-	  Added DISTCC_HOSTS= as distcc breaks qt-embedded
-	* CONFIGURE: Removed config_query for Xinerama support
-	  Added config_query for a graphics driver
-	* DEPENDS: Removed dependency on X11-LIBS
-	  Added optional dependency on freetype2
-	* BUILD: Removed explicit -xft and OpenGL
-	  Added embedded drivers compilation
-
+2013-07-28  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0
+	  PATCHLEVEL=9999
+	  spell deprecated 
