--- a/wm-addons/razor-qt/HISTORY
+++ b/wm-addons/razor-qt/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-10-25 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.5.1
 
