--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-05-29 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.0.7
 
