--- a/utils/xen/HISTORY
+++ b/utils/xen/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-06-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 4.1.5; SECURITY_PATCH++
 	* PRE_BUILD: removed patches
