--- a/utils/pcmciautils/HISTORY
+++ b/utils/pcmciautils/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-02-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: added fallback url for the distfiles
 
