--- a/shell-term-fm/spacefm/HISTORY
+++ b/shell-term-fm/spacefm/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-09-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.8.0
 
