--- a/printer/system-config-printer/HISTORY
+++ b/printer/system-config-printer/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-08-07 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.3.11
 
