--- a/net/network-manager/HISTORY
+++ b/net/network-manager/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-09-21 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.9.6.0
 
