--- a/net/connman/HISTORY
+++ b/net/connman/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-11-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.9
 	* DEPENDS: iptables and gnutls added
