--- a/libs/libvirt/HISTORY
+++ b/libs/libvirt/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-04-11 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.0.4
 
