pulseaudio - change depends udev  -> UDEV

--- a/audio-drivers/pulseaudio/HISTORY
+++ b/audio-drivers/pulseaudio/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-02-15 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: suggest_depends padevchooser->pasystray
 
