--- a/audio-libs/libgpod/HISTORY
+++ b/audio-libs/libgpod/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-02-18 Remko van der Vossen <wich@sourcemage.org>
 	* PRE_BUILD: added a patch to make hal support work again
 
