--- a/audio-soft/media-player-info/HISTORY
+++ b/audio-soft/media-player-info/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-07-24 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 21
 	* DEPENDS: add pkgconfig, python3
