drbd - change depends udev  -> UDEV

--- a/cluster/drbd/HISTORY
+++ b/cluster/drbd/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-01-25 Vlad Glagolev <stealth@sourcemage.org>
 	* TRIGGERS: recast on linux update only when kernel module is enabled
 
