--- a/crypto/pcsc-lite/HISTORY
+++ b/crypto/pcsc-lite/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-05-09 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: libusb => LIBUSB
 
