gparted - change depends udev  -> UDEV

--- a/disk/gparted/HISTORY
+++ b/disk/gparted/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-05-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.16.1
 
