--- a/disk/udisks/HISTORY
+++ b/disk/udisks/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2012-06-04 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: added depends udev with GUDEV subdepends 
 
