--- a/e-17/e17/HISTORY
+++ b/e-17/e17/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-03-31 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: SOURCE_URL[0] for git version fixed
 	* e17update: updated to work also with git version
