devicekit - change depends udev  -> UDEV

--- a/gnome2-libs/devicekit/HISTORY
+++ b/gnome2-libs/devicekit/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2010-08-11 Robin Cook <rcook@wyrms.net>
 	* DETALS: returned to release version as cgit version no longer works
 	* PRE_BUILD: removed as no autogen.sh in release version
