--- a/smgl/systemd/HISTORY
+++ b/smgl/systemd/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2011-12-21 David Kowis <dkowis@shlrm.org>
   * DETAILS: added more information to the long description and refomratted it
 
