--- a/xorg-app/weston/HISTORY
+++ b/xorg-app/weston/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
+	* DEPENDS: udev => UDEV
+
 2013-07-14 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.0
 	* DEPENDS: add mtdev, pixman,glu, lcms2
