--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-07-28  Treeve Jelbert <treeve@sourcemage.org>
+	* database/hk_classes: spell deprecated 
+
 2013-07-26 Vlad Glagolev <stealth@sourcemage.org>
 	* mail/sendmail.gpg: moved from sendmail spell, added public key 5207CAD3
 	  (Sendmail Signing Key/2013 <sendmail@Sendmail.ORG>)
