--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2013-07-28  Treeve Jelbert <treeve@sourcemage.org>
+	* database/xbase: spell deprecated 
+
+2013-07-28  Treeve Jelbert <treeve@sourcemage.org>
 	* database/hk_classes: spell deprecated 
 
 2013-07-26 Vlad Glagolev <stealth@sourcemage.org>
