deprecate database/rekall

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 2013-07-28  Treeve Jelbert <treeve@sourcemage.org>
+	* database/rekall: spell deprecated 
+
+2013-07-28  Treeve Jelbert <treeve@sourcemage.org>
 	* database/xbsql: spell deprecated 
 
 2013-07-28  Treeve Jelbert <treeve@sourcemage.org>
