--- a/science/qlandkarte-gt/HISTORY
+++ b/science/qlandkarte-gt/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.7.1
+
 2013-04-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: add sub dependency on OPENGL for qt4
 
