--- a/security/wireshark/HISTORY
+++ b/security/wireshark/HISTORY
@@ -1,3 +1,8 @@
+2013-07-28 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 1.10.1, SECURITY_PATCH=44
+	* PRE_BUILD, 01_fix_pod_file.patch: patch from Arch added
+	* doc-encoding.patch: removed
+
 2013-06-09 Vlad Glagolev <stealth@sourcemage.org>
 	* DEPENDS: commented python support
 	* PRE_BUILD: added, to apply patch
