--- a/printer/hplip/HISTORY
+++ b/printer/hplip/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.13.7
+
 2013-05-30 Ismael Luceno <ismael@sourcemage.org>
 	* cups16.patch.gz, DETAILS, PRE_BUILD: updated spell to 3.13.5
 	  Fixed SOURCE2_URL[0]
