--- a/audio-drivers/alsa-utils/HISTORY
+++ b/audio-drivers/alsa-utils/HISTORY
@@ -1,3 +1,6 @@
+2013-07-28 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.27.2
+
 2013-05-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.27.1
 
