--- a/shell-term-fm/tmux/HISTORY
+++ b/shell-term-fm/tmux/HISTORY
@@ -1,3 +1,6 @@
+2013-07-29 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.8
+
 2012-11-05 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.7
 
