--- a/xorg-lib/libx11/HISTORY
+++ b/xorg-lib/libx11/HISTORY
@@ -1,3 +1,7 @@
+2013-07-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.6.1
+	  update DESCRIPTION
+
 2013-06-04 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.6.0
 	  SECURITY_PATCH=3
