--- a/libs/protobuf/HISTORY
+++ b/libs/protobuf/HISTORY
@@ -1,3 +1,6 @@
+2013-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 2.5.0
+
 2011-10-14 Bor Kraljič <pyrobor@ver.si>
 	* DETAILS: fixed long description wrap (scripted)
 
