--- a/perl-cpan/io-tty/HISTORY
+++ b/perl-cpan/io-tty/HISTORY
@@ -1,3 +1,6 @@
+2013-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 1.10
+
 2010-08-17 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 1.08
 
