--- a/devel/automake/HISTORY
+++ b/devel/automake/HISTORY
@@ -1,3 +1,6 @@
+2013-07-30 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 1.14
+
 2013-07-12 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.13.2
 
