eudev-v1.1 eudev is a fork of udev, which is independent of the init system it builds and runs for me on two systems. the only poroblem that I currently have is that /dev/pts is not created, even though /etc/init.d/runlevels/%DEV/devices runs.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-07-30  Treeve Jelbert <treeve@sourcemage.org>
+	* disk/eudev: new spell - fork of udev
+
 2013-07-28  Treeve Jelbert <treeve@sourcemage.org>
 	* database/rekall: spell deprecated 
 
