ecore: Updated to 1.7.8

--- a/e-17/ecore/HISTORY
+++ b/e-17/ecore/HISTORY
@@ -1,3 +1,6 @@
+2013-07-30 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.7.8
+
 2013-01-08 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.7.5
 	* DEPENDS, SUB_DEPENDS: Add all evas flags for evas optional dependency
