--- a/e-17/evas/HISTORY
+++ b/e-17/evas/HISTORY
@@ -1,3 +1,6 @@
+2013-07-30 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.7.8
+
 2013-03-27 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* BUILD: fix glib include paths
 
