--- a/e-17/edje/HISTORY
+++ b/e-17/edje/HISTORY
@@ -1,3 +1,7 @@
+2013-07-30 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.7.8
+	* DEPENDS: Depends on evas
+
 2013-01-08 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.7.5
 
