--- a/e-17/expedite/HISTORY
+++ b/e-17/expedite/HISTORY
@@ -1,5 +1,6 @@
 2013-07-30 Eric Sandall <sandalle@sourcemage.org>
-	* DETAILS: Updated to 1.7.7
+	* DETAILS: Updated to 1.7.8
+	  Updated to 1.7.7
 
 2013-01-08 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.7.5
