--- a/e-17/elementary/HISTORY
+++ b/e-17/elementary/HISTORY
@@ -1,3 +1,7 @@
+2013-07-30 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.7.8
+	* DEPENDS: SCM optionally uses edbus, stable optionally uses e_dbus
+
 2013-03-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: subversion -> git
 
