--- a/e-17/eeze/HISTORY
+++ b/e-17/eeze/HISTORY
@@ -1,3 +1,6 @@
+2013-07-30 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.7.8
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
