--- a/e-17/e17/HISTORY
+++ b/e-17/e17/HISTORY
@@ -1,3 +1,6 @@
+2013-07-30 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.17.4
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
