--- a/e-17/terminology/HISTORY
+++ b/e-17/terminology/HISTORY
@@ -1,3 +1,6 @@
+2013-07-30 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.3.0
+
 2013-03-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: subversion -> git
 
