e17/etrophy: Added a library to manage scores, trophies, and unlockables

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-07-30 Eric Sandall <sandalle@sourcemage.org>
+	* e17/etrophy: Added a library to manage scores, trophies, and unlockables
+
 2013-07-30  Treeve Jelbert <treeve@sourcemage.org>
 	* disk/eudev: new spell - fork of udev
 
