--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2013-07-30 Eric Sandall <sandalle@sourcemage.org>
 	* e17/etrophy: Added a library to manage scores, trophies, and unlockables
+	* e17/echievements: Added an achievements module for Enlightenment 17
 
 2013-07-30  Treeve Jelbert <treeve@sourcemage.org>
 	* disk/eudev: new spell - fork of udev
