--- a/database/virtuoso/HISTORY
+++ b/database/virtuoso/HISTORY
@@ -1,3 +1,6 @@
+2013-07-31 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.1.7
+
 2012-08-03 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 6.1.6
 
