--- a/crypto/gnutls/HISTORY
+++ b/crypto/gnutls/HISTORY
@@ -1,3 +1,6 @@
+2013-08-01 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: 3.2.3
+
 2013-07-16 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: 3.2.2
 	* PREPARE: add new branch 3.2
