--- a/video/vlc/HISTORY
+++ b/video/vlc/HISTORY
@@ -1,3 +1,6 @@
+2013-08-01 Treeve Jelbert <treeve@sourcemage.org> 
+	* DETAILS: 2.0.8
+
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
 
