--- a/utils/util-linux/HISTORY
+++ b/utils/util-linux/HISTORY
@@ -1,3 +1,6 @@
+2013-08-02 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version to 2.23.2
+
 2013-05-02 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: latest updated to 2.23
 
