prelink: Updated to 20130503

--- a/devel/prelink/HISTORY
+++ b/devel/prelink/HISTORY
@@ -1,3 +1,6 @@
+2013-08-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 20130503
+
 2009-05-29 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: SOURCE_URL and WEB_SITE are ftp -> http
 	  Updated to 20060213
