haskell/haskell-git-annex: version 4.20130802

--- a/haskell/haskell-git-annex/HISTORY
+++ b/haskell/haskell-git-annex/HISTORY
@@ -1,3 +1,6 @@
+2013-08-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.20130802
+
 2013-07-23 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.20130723
 
