--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,8 @@
+2013-08-02 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated devel to 1.7.0
+	* DEPENDS: 1.7.0+ optionally uses lcms2 instead of lcms
+	  1.6 and 1.7 optionally depend on openal-soft (not openal)
+
 2013-07-24 Eric Sandall <sandalle@sourcemage.org>
 	* sc2-login.diff: Updated to apply cleanly to 1.6
 
