--- a/python-pypi/bzr/HISTORY
+++ b/python-pypi/bzr/HISTORY
@@ -1,3 +1,6 @@
+2012-08-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.6.0
+
 2012-05-31 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.5.1
 
