--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2013-08-04 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.10.5
+	* info/patches/maintenance_patches_3/patch-3.10.5: added
+
 2013-07-29 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.10.4
 	* info/patches/maintenance_patches_3/patch-3.10.4: added
