--- a/crypto/john/HISTORY
+++ b/crypto/john/HISTORY
@@ -1,3 +1,7 @@
+2013-08-04 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 1.8.0
+
 2012-03-12 Arjan Bouter <abouter@sourcemage.org>
 	* DETAILS: 1.7.9
 	* BUILD, CONFIGURE: allow compiling for more archs
