--- a/python-pypi/mercurial/HISTORY
+++ b/python-pypi/mercurial/HISTORY
@@ -1,3 +1,6 @@
+2013-08-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: updated to 2.7
+
 2013-07-05 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: updated to 2.6.3
 
