graphics/exiv2: add patches from upstream to fix a memory leak, add support for recent cameras/lenses, fix use after delete

--- a/graphics/exiv2/HISTORY
+++ b/graphics/exiv2/HISTORY
@@ -1,3 +1,48 @@
+2012-08-05 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* 00_hyphens_used_as_minus.diff,
+	  90_changeset_r2743.diff,
+	  90_changeset_r2744.diff,
+	  90_changeset_r2756.diff,
+	  90_changeset_r2818_partial.diff,
+	  90_changeset_r2860.diff,
+	  90_changeset_r2889.diff,
+	  90_changeset_r2958.diff,
+	  90_changeset_r2959.diff,
+	  90_changeset_r2961.diff,
+	  90_changeset_r2963.diff,
+	  90_changeset_r2968.diff,
+	  90_changeset_r2969.diff,
+	  90_changeset_r2970.diff,
+	  90_changeset_r2975.diff,
+	  90_changeset_r2978.diff,
+	  90_changeset_r2981.diff,
+	  90_changeset_r2982.diff,
+	  90_changeset_r2984.diff,
+	  90_changeset_r2985.diff,
+	  90_changeset_r2986.diff,
+	  90_changeset_r2988.diff,
+	  90_changeset_r2989.diff,
+	  90_changeset_r2990.diff,
+	  90_changeset_r2991.diff,
+	  90_changeset_r2992.diff,
+	  90_changeset_r2993.diff,
+	  90_changeset_r2994.diff,
+	  90_changeset_r2995.diff,
+	  90_changeset_r2998.diff,
+	  90_changeset_r3002.diff,
+	  90_changeset_r3003.diff,
+	  90_changeset_r3004.diff,
+	  90_changeset_r3005.diff,
+	  90_changeset_r3006.diff,
+	  90_changeset_r3011.diff,
+	  90_changeset_r3016.diff,
+	  90_changeset_r3017.diff,
+	  90_changeset_r3023.diff,
+	  90_changeset_r3026.diff,
+	  95_post_r3026_cleanup.diff,
+	  PRE_BUILD: add support for several recent cameras and lenses,
+	  fix a memory leak, fix a use after delete
+
 2012-04-26 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.23
 	* UP_TRIGGERS: update old soversion
