--- a/libs/libvdpau/HISTORY
+++ b/libs/libvdpau/HISTORY
@@ -1,3 +1,6 @@
+2013-08-05 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.7
+
 2013-02-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.6
 
