--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-08-05 Ismael Luceno <ismael@sourcemage.org>
+	* printer/html2ps: new spell, an HTML to PostScript converter
+
 2013-07-30 Eric Sandall <sandalle@sourcemage.org>
 	* e17/etrophy: Added a library to manage scores, trophies, and unlockables
 	* e17/echievements: Added an achievements module for Enlightenment 17
