--- a/net/libpcap/HISTORY
+++ b/net/libpcap/HISTORY
@@ -1,3 +1,7 @@
+2013-08-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.4.0
+	* PRE_BUILD, libnl-3.patch: deleted
+
 2012-06-13 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.3.0
 
