--- a/doc/groff/HISTORY
+++ b/doc/groff/HISTORY
@@ -1,3 +1,7 @@
+2013-08-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.22.2
+	* BUILD: deleted
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
