--- a/devel/bison/HISTORY
+++ b/devel/bison/HISTORY
@@ -1,3 +1,6 @@
+2013-08-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.0
+
 2012-12-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 2.7
 
