--- a/disk/eudev/HISTORY
+++ b/disk/eudev/HISTORY
@@ -1,4 +1,7 @@
-2013-07-230 Treeve Jelbert <treeve@sourcemage.org>
+2013-08-06 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version v1.2
+
+2013-07-30 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version v1.1
 	* INSTALL: create symlingk for programs that link to old udev
 	  new spell based on udev spell
