--- a/doc/qpdf/HISTORY
+++ b/doc/qpdf/HISTORY
@@ -1,3 +1,7 @@
+2013-08-06 Ismael Luceno <ismael@sourcemage.org>
+	* DETAILS: Fixed SOURCE_URL[0]
+	  updated spell to 5.0.0
+
 2013-06-03 Vlad Glagolev <stealth@sourcemage.org>
 	* UP_TRIGGERS: added, for proper migration on major/minor spell updates
 
