--- a/utils/lshw/HISTORY
+++ b/utils/lshw/HISTORY
@@ -1,3 +1,6 @@
+2013-08-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: B.02.17
+
 2012-12-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version B.02.16
 
