--- a/libs/nspr/HISTORY
+++ b/libs/nspr/HISTORY
@@ -1,3 +1,7 @@
+2013-08-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.10
+	* BUILD: updated, mozilla/nsprpub -> nspr
+
 2013-04-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.9.6
 
