--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* utils/nocache: new spell, a tool for excluding processes from
+	  participating in the buffer cache
+
 2013-08-06  Treeve Jelbert <treeve@sourcemage.org>
 	* net/tcpdump.gpg: add D9C15D0D <The Tcpdump Group>
 
