--- a/utils/nocache/HISTORY
+++ b/utils/nocache/HISTORY
@@ -1,3 +1,4 @@
 2013-08-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS, BUILD, PRE_BUILD: spell created
+	* PRE_BUILD: fix path in nocache executable
 
