--- a/libs/tbb/HISTORY
+++ b/libs/tbb/HISTORY
@@ -1,3 +1,6 @@
+2013-08-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 41_20130613
+
 2013-05-22 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 41_20130314
 
