--- a/kde4-apps/digikam4/HISTORY
+++ b/kde4-apps/digikam4/HISTORY
@@ -1,3 +1,6 @@
+2013-08-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.3.0
+
 2013-07-12 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on sane-backends
 
