--- a/xorg-driver/xf86-video-ati/HISTORY
+++ b/xorg-driver/xf86-video-ati/HISTORY
@@ -1,3 +1,6 @@
+2013-08-07 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS version 7.2.0
+
 2013-07-27 Treeve Jelbert <treeve@sourcemage.org>
 	* DEPENDS: udev => UDEV
 
