--- a/kde4/kdepimlibs4/HISTORY
+++ b/kde4/kdepimlibs4/HISTORY
@@ -1,3 +1,6 @@
+2013-08-07 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.10.5
+
 2013-07-11 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Move kdelibs4 dependency to KDE_DEPENDS case
 
