--- a/disk/libburn/HISTORY
+++ b/disk/libburn/HISTORY
@@ -1,3 +1,6 @@
+2013-08=08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.2
+
 2013-06-01 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.0.pl01
 
