--- a/disk/libisofs/HISTORY
+++ b/disk/libisofs/HISTORY
@@ -1,3 +1,6 @@
+2013-08-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.3.2
+
 2013-05-19 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.3.0
 
