--- a/xorg-lib/pixman/HISTORY
+++ b/xorg-lib/pixman/HISTORY
@@ -1,3 +1,6 @@
+2013-08-08 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.30.2
+
 2013-05-09 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 0.30.0
 
