--- a/kde4/kdepim4/HISTORY
+++ b/kde4/kdepim4/HISTORY
@@ -1,3 +1,6 @@
+2013-08-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.10.5
+
 2013-03-11 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: added depends nepomuk-widgets
 	  added optional_depends cyrus-sasl
