--- a/kde4/kdebase-workspace4/HISTORY
+++ b/kde4/kdebase-workspace4/HISTORY
@@ -1,3 +1,6 @@
+2013-08-08 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.10.5
+
 2013-03-10 Sukneet Basuta <sukneet@sourcemage.org>
 	* DEPENDS: added depends strigi, xcb-util, xcb-util-image, xcb-util-renderutil
 	  added optional_depends kdelibs4, fontconfig2, pciutils, soprano, nepomuk-core,
