--- a/xorg-app/xset/HISTORY
+++ b/xorg-app/xset/HISTORY
@@ -1,3 +1,6 @@
+2013-08-09  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.3
+
 2011-12-06  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.2
 
