--- a/xorg-app/xprop/HISTORY
+++ b/xorg-app/xprop/HISTORY
@@ -1,3 +1,6 @@
+2013-08-09  Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.2.2
+
 2011-06-30  Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 1.2.1
 
