--- a/xorg-app/xwd/HISTORY
+++ b/xorg-app/xwd/HISTORY
@@ -1,3 +1,6 @@
+2013-08-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 1.0.6
+
 2012-02-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.5
 
