--- a/x11-toolkits/qwt5/HISTORY
+++ b/x11-toolkits/qwt5/HISTORY
@@ -1,3 +1,8 @@
+2013-08-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 6.1.0
+	* BUILD: use qt4_build
+	* PRE_BUILD: simplify
+
 2012-08-15 Thomas Orgis <sobukus@sourcemage.org>
 	* DETAILS, BUILD, DEPENDS, PRE_BUILD: update to qt4-only 6.0.1 ... qwt5
 	  name is suboptimal now.
