qwtplot3d - use qt4_build

--- a/devel/qwtplot3d/HISTORY
+++ b/devel/qwtplot3d/HISTORY
@@ -1,3 +1,7 @@
+2013-08-09 Treeve Jelbert <treeve@sourcemage.org>
+	* BUILD: use qt4_build
+	* DEPENDS: QT => qt4
+
 2012-05-19 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* PRE_BUILD, qwtplot3d-qt48.patch: added patch from gentoo to fix compile
 	  error
