--- a/libs/muparser/HISTORY
+++ b/libs/muparser/HISTORY
@@ -1,3 +1,7 @@
+2013-08-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2.2.3
+	  new website & url
+
 2011-07-30 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: changed dependency on g++ to dependency on gcc with
 	  sub-depends on CXX (scripted)
