--- a/science/qtiplot/HISTORY
+++ b/science/qtiplot/HISTORY
@@ -1,3 +1,11 @@
+2013-08-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.9.8.9
+	* BUILD: use qt4_build
+	* DEPENDS: add libpng, muparser, qt4 needs QT3
+	* PRE_BUILD: copy build.conf, various fixups
+	* build.conf: added
+	* conf.patch: deleted
+
 2007-07-12 Jaka Kranjc <lynxlynxlynx@sourcemage.org>
 	* PRE_BUILD: enable python, disable when dependency not met
 	* DEPENDS: added optional pyqt4
