--- a/science/qtoctave/HISTORY
+++ b/science/qtoctave/HISTORY
@@ -1,3 +1,7 @@
+2013-08-09 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 0.10.1
+	* BUILD: use qt4_cmake_build
+
 2011-01-02 Ismael Luceno <ismael@sourcemage.org>
 	* qtoctave.desktop: added spanish comment
 
