terminator: Depends on vte built with python (pygtk2) bindings

--- a/shell-term-fm/terminator/HISTORY
+++ b/shell-term-fm/terminator/HISTORY
@@ -1,6 +1,7 @@
 2013-08-09 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.97
 	  SOURCE/VERSION separator changed from "_" to "-"
+	* DEPENDS: Depends on vte built with python (pygtk2) bindings
 
 2013-01-11 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.96
