--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-08-10  Treeve Jelbert <treeve@sourcemage.org>
+	* libs/pugixml: new spll, xml parser
+
 2013-08-07 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* utils/nocache: new spell, a tool for excluding processes from
 	  participating in the buffer cache
