--- a/science-libs/eigen3/HISTORY
+++ b/science-libs/eigen3/HISTORY
@@ -1,3 +1,6 @@
+2013-08-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.1.4
+
 2013-04-17 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 3.1.3
 
