--- a/audio-libs/libdiscid/HISTORY
+++ b/audio-libs/libdiscid/HISTORY
@@ -1,3 +1,6 @@
+2013-08-10 Treeve Jelbert <treeve@sourcemage.org>
+	* version 0.5.2
+
 2013-06-28 Treeve Jelbert <treeve@sourcemage.org>
 	* version 0.5.1
 
