--- a/libs/tzdata/HISTORY
+++ b/libs/tzdata/HISTORY
@@ -1,3 +1,6 @@
+2013-08-10 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 2013d
+
 2013-05-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2013c
 
