--- a/net/iproute2/HISTORY
+++ b/net/iproute2/HISTORY
@@ -1,3 +1,6 @@
+2013-08-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 3.10.0
+
 2012-12-25 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.7.0
 
