--- a/devel/nasm/HISTORY
+++ b/devel/nasm/HISTORY
@@ -1,3 +1,6 @@
+2013-08-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 2.10.09
+
 2012-12-10 Treeve Jelbert <treeve@sourcemage.org>
 	* DETAILS: version 2.10.06
 
