--- a/net/whois/HISTORY
+++ b/net/whois/HISTORY
@@ -1,3 +1,6 @@
+2013-08-11 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 5.0.26
+
 2013-06-19 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 5.0.25
 
