--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2013-08-12 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.10.6
+	* info/patches/maintenance_patches_3/patch-3.10.6: added
+
 2013-08-04 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.10.5
 	* info/patches/maintenance_patches_3/patch-3.10.5: added
