--- a/ftp/curl/HISTORY
+++ b/ftp/curl/HISTORY
@@ -1,3 +1,6 @@
+2013-08-12 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 7.32.0
+
 2013-06-25 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 7.31.0; SECURITY_PATCH++ (CVE-2013-2174)
 
