--- a/python-pypi/pelican/HISTORY
+++ b/python-pypi/pelican/HISTORY
@@ -1,3 +1,6 @@
+2013-08-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: depend on python-markdown instead of markdown
+
 2013-07-03 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: add dependency on smartypants
 
