python-pypi/clint: new spell, Python Command-line Application Tools

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-08-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* python-pypi/clint: new spell, Python Command-line Application Tools
+
 2013-08-10  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/pugixml: new spll, xml parser
 
