python-pypi/argh: new spell, an unobtrusive argparse wrapper with natural syntax

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2013-08-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* python-pypi/clint: new spell, Python Command-line Application Tools
+	* python-pypi/argh: new spell, an unobtrusive argparse wrapper with
+	  natural syntax
 
 2013-08-10  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/pugixml: new spll, xml parser
