python-pypi/sigal: new spell, a simple static gallery generator

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	  natural syntax
 	* python-pypi/pilkit: new spell, a collection of utilities and processors
 	  for the Python Imaging Libary
+	* python-pypi/sigal: new spell, a static gallery generator
 
 2013-08-10  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/pugixml: new spll, xml parser
