python-pypi/pilkit: new spell, a collection of utilities and processors for the Python Imaging Libary

--- a/ChangeLog
+++ b/ChangeLog
@@ -2,6 +2,8 @@
 	* python-pypi/clint: new spell, Python Command-line Application Tools
 	* python-pypi/argh: new spell, an unobtrusive argparse wrapper with
 	  natural syntax
+	* python-pypi/pilkit: new spell, a collection of utilities and processors
+	  for the Python Imaging Libary
 
 2013-08-10  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/pugixml: new spll, xml parser
