python-pypi/markdown: deprecated in favor of python-pypi/markdown

--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,7 @@
 	* python-pypi/pilkit: new spell, a collection of utilities and processors
 	  for the Python Imaging Libary
 	* python-pypi/sigal: new spell, a static gallery generator
+	* python-pypi/markdown: spell deprecated [spell exists twice in test]
 
 2013-08-10  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/pugixml: new spll, xml parser
