--- a/python-pypi/markdown/HISTORY
+++ b/python-pypi/markdown/HISTORY
@@ -1,3 +1,8 @@
+2013-08-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* spell deprecated [spell exists twice in test]
+	* PATCHLEVEL=9999
+	* DETAILS: version 0
+
 2013-07-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS, DETAILS: spell created
 
