kvm: Optionally depends on texlive for documentation

--- a/kernels/kvm/HISTORY
+++ b/kernels/kvm/HISTORY
@@ -1,3 +1,6 @@
+2013-08-12 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depends on texlive for documentation
+
 2012-05-02 Sukneet Basuta <sukneet@sourcemage.org>
 	* DETAILS: updated spell to 1.0.1
 	* INSTALL: only symlink qemu-kvm to qemu-system-x86_64 if 
