--- a/python-pypi/virtinst/HISTORY
+++ b/python-pypi/virtinst/HISTORY
@@ -1,3 +1,7 @@
+2013-07-26 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depend on a provider of PYTHON so that python-pypi's
+	  default_build() calls the correct python.
+
 2012-10-16 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.600.3
 
