virtinst: Updated to 0.600.4

--- a/python-pypi/virtinst/HISTORY
+++ b/python-pypi/virtinst/HISTORY
@@ -1,3 +1,6 @@
+2013-08-12 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.600.4
+
 2013-07-26 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depend on a provider of PYTHON so that python-pypi's
 	  default_build() calls the correct python.
