libvirt: --*-libssh2 -> --*-ssh2

--- a/libs/libvirt/HISTORY
+++ b/libs/libvirt/HISTORY
@@ -1,5 +1,6 @@
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.1.1
+	* DEPENDS: --*-libssh2 -> --*-ssh2
 
 2013-07-28 Treeve Jelbert <treeve@sourcemage.org> 
 	* DEPENDS: udev => UDEV
