libs/libvirt-glib: Added a glib wrapper for libvirt.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-08-12 Eric Sandall <sandalle@sourcemage.org>
+	* libs/libvirt-glib: Added a glib wrapper for libvirt.
+
 2013-08-10  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/pugixml: new spll, xml parser
 
