--- a/x11/virt-viewer/HISTORY
+++ b/x11/virt-viewer/HISTORY
@@ -1,3 +1,6 @@
+2013-08-12 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.5.7
+
 2012-10-16 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.5.4
 
