--- a/python-pypi/graphite/HISTORY
+++ b/python-pypi/graphite/HISTORY
@@ -1,3 +1,7 @@
+2013-08-12 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depend on a provider of PYTHON so that python-pypi's
+	  default_build() calls the correct python.
+
 2011-04-11 Arjan Bouter <abouter@sourcemage.org>
 	* DEPENDS, DETAILS: spell created
 
