qemu: Optionally depends on texinfo for documentation Apply docs-Fix-generating-qemu-doc.html-with-texinfo-5.patch from https://bugs.launchpad.net/qemu/+bug/1130533

--- a/utils/qemu/HISTORY
+++ b/utils/qemu/HISTORY
@@ -1,3 +1,8 @@
+2013-08-12 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depends on texinfo for documentation
+	* PRE_BUILD: Apply docs-Fix-generating-qemu-doc.html-with-texinfo-5.patch
+	* docs-Fix-generating-qemu-doc.html-with-texinfo-5.patch: from https://bugs.launchpad.net/qemu/+bug/1130533
+
 2013-04-16 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.4.1
 	  Removed branches, they no longer (even 1.1) compile without work.
