--- a/utils/spice-protocol/HISTORY
+++ b/utils/spice-protocol/HISTORY
@@ -1,3 +1,6 @@
+2013-08-12 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.12.6
+
 2012-01-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.10.0
 
