--- a/utils/spice/HISTORY
+++ b/utils/spice/HISTORY
@@ -1,3 +1,7 @@
+2013-08-12 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 0.12.4
+	* DEPENDS: Depends on pyparsing
+
 2012-01-10 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.10.0
 	* BUILD: added -lz
