utils/spice-gtk: Added a GTK client and libraries for SPICE.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* libs/libvirt-glib: Added a glib wrapper for libvirt.
+	* utils/spice-gtk: Added a GTK client and libraries for SPICE.
 
 2013-08-10  Treeve Jelbert <treeve@sourcemage.org>
 	* libs/pugixml: new spll, xml parser
