--- a/kde4-graphics/gwenview4/HISTORY
+++ b/kde4-graphics/gwenview4/HISTORY
@@ -1,3 +1,6 @@
+2013-08-13 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 4.10.5
+
 2013-07-12 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Depends on kdebase4
 
