qemu: Updated to 1.5.2 sb16, cs4231a, adlib, and gus sound cards removed Query for Trusted Platform Module (TPM) support Optionally depends on vte, libaio, libusbx, and spice --audio-card-list= removed, modify default-configs/pci.mak (for PCI) and default-configs/sound.mak (for ISA) Pass QEMU_TPM to configure

--- a/utils/qemu/HISTORY
+++ b/utils/qemu/HISTORY
@@ -1,3 +1,12 @@
+2013-08-13 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated to 1.5.2
+	* CONFIGURE: sb16, cs4231a, adlib, and gus sound cards removed
+	  Query for Trusted Platform Module (TPM) support
+	* DEPENDS: Optionally depends on vte, libaio, libusbx, and spice
+	* BUILD: --audio-card-list= removed, modify default-configs/pci.mak (for
+	  PCI) and default-configs/sound.mak (for ISA)
+	  Pass QEMU_TPM to configure
+
 2013-08-12 Eric Sandall <sandalle@sourcemage.org>
 	* DEPENDS: Optionally depends on texinfo for documentation
 	* PRE_BUILD: Apply docs-Fix-generating-qemu-doc.html-with-texinfo-5.patch
