python-pypi/pillow: new spell, a fork of pil that is maintained actively

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* python-pypi/pillow: new spell, a fork of pil that is maintained
+	  actively
+
 2013-08-12 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* python-pypi/clint: new spell, Python Command-line Application Tools
 	* python-pypi/argh: new spell, an unobtrusive argparse wrapper with
