graphics/uniconvertor: changed dep on pil to pillow

--- a/graphics/uniconvertor/HISTORY
+++ b/graphics/uniconvertor/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2008-03-22 Ivan Lezhnjov Jr. <ivan.lezhnjov.jr@gmail.com>
 	* BUILD, DEPENDS, DETAILS, HISTORY, INSTALL: created this spell.
 
