editors/scribus4: changed dep on pil to pillow

--- a/editors/scribus4/HISTORY
+++ b/editors/scribus4/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2013-01-15 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 1.4.2, bz2 -> xz, asc -> sig, SOURCE_DIRECTORY updated
 	* scribus.gpg: F60166DA added, Peter Linnell <plinnell@scribus.net>
