audio-players/ccx2: changed dep on pil to pillow

--- a/audio-players/ccx2/HISTORY
+++ b/audio-players/ccx2/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2009-10-20 Quentin Rameau <quinq@sourcemage.org>
 	* PREPARE: created
 	* DETAILS: added SCM version
