ftp/tucan: change dep on pil to pillow

--- a/ftp/tucan/HISTORY
+++ b/ftp/tucan/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2011-04-11 Philippe "Puppet_Master" Caseiro
 	* DETAILS: updating to version 0.3.10
 
