python-pypi/calibre: depend on pillow instead of pil

--- a/python-pypi/calibre/HISTORY
+++ b/python-pypi/calibre/HISTORY
@@ -1,3 +1,6 @@
+2013-08-14 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DEPENDS: pil -> pillow
+
 2013-04-01 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DEPENDS: added dependency on qt4-private-headers
 	* PRE_BUILD, calibre-stop-phone-home.diff: removed obsolete
