mdm: Depends on automake-1.9 Doesn't work with automake 1.14 (1.13 is the latest supported)

--- a/x11/mdm/HISTORY
+++ b/x11/mdm/HISTORY
@@ -1,3 +1,7 @@
+2013-08-15 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Depends on automake-1.9 (doesn't work with
+	  automake 1.14)
+
 2013-06-04 Eric Sandall <sandalle@sourcemage.org>
 	* Created
 	* PRE_BUILD, pam.d/mdm{,-autologin}: Need to provide our own
