vte3: Allow requesting deprecated GLib/Pango/ATK/GDK/GTK+ features

--- a/gnome3-libs/vte3/HISTORY
+++ b/gnome3-libs/vte3/HISTORY
@@ -1,6 +1,8 @@
 2013-08-15 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 0.34.7
 	* DEPENDS: Depends on intltool
+	* *SUB_DEPENDS: Allow requesting deprecated
+	  GLib/Pango/ATK/GDK/GTK+ features
 
 2012-12-27 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 0.34.2
