vte3: Does not use pygtk2 for python bindings Uses gobject-introspection instead

--- a/gnome3-libs/vte3/HISTORY
+++ b/gnome3-libs/vte3/HISTORY
@@ -5,6 +5,8 @@
 	* *SUB_DEPENDS: Allow requesting deprecated
 	  GLib/Pango/ATK/GDK/GTK+ features
 	  Allow requesting gobject-introspection dependency
+	  Does not use pygtk2 for python bindings, but
+	  gobject-introspection instead
 
 2012-12-27 Pol Vinogradov <vin.public@gmail.com>
 	* DETAILS: version 0.34.2
