pygobject: Disable introspection support See https://bugzilla.gnome.org/show_bug.cgi?id=657054 and https://bugzilla.redhat.com/show_bug.cgi?id=719791

--- a/gnome2-libs/pygobject/HISTORY
+++ b/gnome2-libs/pygobject/HISTORY
@@ -1,3 +1,11 @@
+2013-08-15 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* DEPENDS: Do not optionally depend on gobject-introspection
+	* BUILD: Disable introspection support
+	  See https://bugzilla.gnome.org/show_bug.cgi?id=657054 and
+	  https://bugzilla.redhat.com/show_bug.cgi?id=719791
+	* PRE_BUILD,introspection.patch: Removed
+
 2012-06-11 Sukneet Basuta <sukneet@sourcemage.org>
 	* BUILD: only build with introspection if pygobject3
 	  does not have introspection enabled.
