python: Trigger check_self on pygobject3

--- a/devel/python/HISTORY
+++ b/devel/python/HISTORY
@@ -1,3 +1,6 @@
+2013-08-15 Eric Sandall <sandalle@sourcemage.org>
+	* UP_TRIGGERS: Trigger check_self on pygobject3
+
 2013-05-18 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 2.7.5
 
