accounts,groups,policykit: Add polkitd for policykit
Create /var/lib/polkit-1 and set as home directory for user polkitd.
See http://forums.gentoo.org/viewtopic-t-926142-start-0.html

$ sudo telinit run smgl-messagebus restart
...
Unknown username "polkitd" in message bus configuration file

I am unsure if polkituser is still required

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2013-08-16 Eric Sandall <sandalle@sourcemage.org>
+	* accounts/groups: Add polkitd for policykit
+
 2013-08-15 Eric Sandall <sandalle@sourcemage.org>
 	* python-pypi/ipaddr: Added Google's IP address manipulation
 	  library.
