--- a/gnome2-libs/policykit/HISTORY
+++ b/gnome2-libs/policykit/HISTORY
@@ -1,3 +1,11 @@
+2013-08-16 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* DEPENDS: Depends on shadow for usermod
+	* BUILD: polkitd user is now used in config
+	* INSTALL: Create /var/lib/polkit-1 and set as home directory
+	  for user polkitd.
+	  See http://forums.gentoo.org/viewtopic-t-926142-start-0.html
+
 2013-05-30 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.111
 
