policykit-gnome: Install xdg autostart file for "other" WM/DE polkit-gnome-authentication-agent-1.desktop autostart file modified from http://code.google.com/p/max-repo/source/browse/trunk/x121e/etc/xdg/autostart/polkit-gnome-authentication-agent-1.desktop?spec=svn622&r=622

--- a/gnome2-libs/policykit-gnome/HISTORY
+++ b/gnome2-libs/policykit-gnome/HISTORY
@@ -1,3 +1,9 @@
+2013-08-16 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: PATCHLEVEL++
+	* INSTALL: Install xdg autostart file for "other" WM/DE
+	* polkit-gnome-authentication-agent-1.desktop: Autostart file
+	  modified from http://code.google.com/p/max-repo/source/browse/trunk/x121e/etc/xdg/autostart/polkit-gnome-authentication-agent-1.desktop?spec=svn622&r=622
+
 2011-12-14 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.105
 
