--- a/devel/qtscriptgenerator/HISTORY
+++ b/devel/qtscriptgenerator/HISTORY
@@ -1,3 +1,6 @@
+2013-08-17 Ladislav Hagara <hgr@vabo.cz>
+	* DETAILS: 0.2.0
+
 2010-09-22 Bor Kraljič <pyrobor@ver.si>
 	* qtscriptgenerator.gcc-4.4.patch: to compile with gcc 4.4
 	  http://code.google.com/p/qtscriptgenerator/issues/detail?id=37
