graphics/lensfun: version 0.2.7

--- a/graphics/lensfun/HISTORY
+++ b/graphics/lensfun/HISTORY
@@ -1,3 +1,6 @@
+2012-08-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 0.2.7
+
 2012-07-08 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 0.2.6
 	* DETAILS, PREPARE, DEPENDS: use prepare_select_branch
