--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,7 @@
+2013-08-20 Ladislav Hagara <hgr@vabo.cz>
+	* latest.defaults: LATEST_maintenance_patches_3=patch-3.10.8
+	* info/patches/maintenance_patches_3/patch-3.10.8: added
+
 2013-08-15 Ladislav Hagara <hgr@vabo.cz>
 	* latest.defaults: LATEST_maintenance_patches_3=patch-3.10.7
 	* info/patches/maintenance_patches_3/patch-3.10.7: added
