--- a/net/tinc/HISTORY
+++ b/net/tinc/HISTORY
@@ -1,3 +1,6 @@
+2013-08-21 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 1.0.22
+
 2013-04-23 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 1.0.21; SECURITY_PATCH++ (CVE-2013-1428)
 
