--- a/libs/libbsd/HISTORY
+++ b/libs/libbsd/HISTORY
@@ -1,3 +1,10 @@
+2013-08-23 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.6.0; renewed source extension;
+	  converted to upstream signature checking
+	* DEPENDS: dropped unneeded dependency
+	* libbsd.gpg: added gpg keyring (9D928C9B public key Guillem Jover
+	  <guillem@hadrons.org>)
+
 2012-07-05 Ladislav Hagara <hgr@vabo.cz>
 	* DETAILS: 0.4.2
 
