nss: branch 3.15, version 3.15.1

--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,8 @@
+2013-08-24 Remko van der Vossen <wich@sourcemage.org>
+	* DETAILS, DEPENDS, PREPARE, PRE_BUILD, BUILD, INSTALL,
+	  SUB_DEPENDS, PRE_SUB_DEPENDS, nss-3.15.1-standalone-2.patch:
+	  Added 3.15 branch for version 3.15.1
+
 2013-04-02 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 3.14.3
 	* nss-3.14.3_sync_with_upstream_softokn_changes.patch, PRE_BUILD:
