grub: Allow to select the target platform

--- a/disk/grub2/HISTORY
+++ b/disk/grub2/HISTORY
@@ -1,3 +1,6 @@
+2013-08-24 Ismael Luceno <ismael@sourcemage.org>
+	* BUILD, CONFIGURE: Allow to select the target platform
+
 2012-10-09 Eric Sandall <sandalle@sourcemage.org>
 	* PRE_BUILD: Apply glibc-2.16.patch
 	* glibc-2.16.patch: Fix compilation with glibc 2.16+ (gets removed from GNU
