opendkim: new spell, open source DKIM library, MTA filter implementation and associated tools

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2013-08-26 Vlad Glagolev <stealth@sourcemage.org>
+	* mail/opendkim: new spell, open source DKIM library, MTA filter
+	  implementation and associated tools
+
 2013-08-18 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* graphics/pktriggercord: new spell, remote control software
 	  for Pentax DSLRs
