nss: fixed for DEFAULT branch

--- a/crypto/nss/HISTORY
+++ b/crypto/nss/HISTORY
@@ -1,3 +1,6 @@
+2013-08-26 Ladislav Hagara <hgr@vabo.cz>
+	* BUILD, INSTALL: fixed for DEFAULT branch
+
 2013-08-24 Remko van der Vossen <wich@sourcemage.org>
 	* DETAILS, DEPENDS, PREPARE, PRE_BUILD, BUILD, INSTALL,
 	  SUB_DEPENDS, PRE_SUB_DEPENDS, nss-3.15.1-standalone-2.patch:
