--- a/crypto/nss/INSTALL
+++ b/crypto/nss/INSTALL
@@ -1,3 +1,7 @@
+if [ "$NSS_BRANCH" == "DEFAULT" ]; then
+  NSS_BRANCH=3.15
+fi &&
+
 if [[ $NSS_BRANCH == "3.15" ]]; then
   cd $SOURCE_DIRECTORY/dist
 else
