--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,6 @@
+2013-08-27 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.17.5
+
 2013-04-18 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.17.4; updated source url
 
