--- a/security/knock/HISTORY
+++ b/security/knock/HISTORY
@@ -1,3 +1,9 @@
+2013-08-28 Vlad Glagolev <stealth@sourcemage.org>
+	* DETAILS: updated spell to 0.6
+	* DEPENDS: made libpcap optional
+	* PRE_BUILD, INSTALL: rewritten knockd man section change logic
+	* performance.patch, doc.patch: removed, fixed by upstream
+
 2011-05-03 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: PATCHLEVEL=1; quoting paths; updated descriptions and urls
 	* INSTALL: added, to install init script
