haskell/haskell-blaze-builder: new spell, an abstraction of buffered output of byte streams

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2013-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* haskell/haskell-attoparsec: new spell, a fast parser combinator library
+	* haskell/blaze-builder: new spell, an abstraction of buffered output of
+	  byte streams
 
 2013-08-26 Vlad Glagolev <stealth@sourcemage.org>
 	* mail/opendkim: new spell, open source DKIM library, MTA filter
