haskell/haskell-unordered-containers: new spell, efficient hashing-based container types

--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,8 @@
 	  byte streams
 	* haskell/haskell-hashable: new spell, a class for values that can be
 	  converted to a hash value
+	* haskell/haskell-unordered-containers: new spell, efficient hashing-based
+	  container types
 
 2013-08-26 Vlad Glagolev <stealth@sourcemage.org>
 	* mail/opendkim: new spell, open source DKIM library, MTA filter
