haskell/haskell-aeson: new spell, a JSON parsing and encoding library

--- a/ChangeLog
+++ b/ChangeLog
@@ -6,6 +6,7 @@
 	  converted to a hash value
 	* haskell/haskell-unordered-containers: new spell, efficient hashing-based
 	  container types
+	* haskell/haskell-aeson: new spell, a JSON parsing and encoding library
 
 2013-08-26 Vlad Glagolev <stealth@sourcemage.org>
 	* mail/opendkim: new spell, open source DKIM library, MTA filter
