haskell/haskell-git-annex: version 4.20130827

--- a/haskell/haskell-git-annex/HISTORY
+++ b/haskell/haskell-git-annex/HISTORY
@@ -1,3 +1,7 @@
+2013-08-28 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* DETAILS: version 4.20130827
+	* DEPENDS: depend on haskell-aeson
+
 2013-08-15 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* DETAILS: version 4.20130815
 
