wine: Updated devel to 1.7.1

--- a/x11-libs/wine/HISTORY
+++ b/x11-libs/wine/HISTORY
@@ -1,3 +1,6 @@
+2013-08-30 Eric Sandall <sandalle@sourcemage.org>
+	* DETAILS: Updated devel to 1.7.1
+
 2013-08-02 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated devel to 1.7.0
 	* DEPENDS: 1.7.0+ optionally uses lcms2 instead of lcms
