audio-players/mpd: fix library search path

--- a/audio-players/mpd/HISTORY
+++ b/audio-players/mpd/HISTORY
@@ -1,3 +1,6 @@
+2013-08-31 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* BUILD: fix library search path so libresid-builder is found
+
 2013-08-27 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 0.17.5
 
