claws-mail: added additional configure and optional depends

--- a/mail/claws-mail/HISTORY
+++ b/mail/claws-mail/HISTORY
@@ -1,3 +1,7 @@
+2013-09-02 Robin Cook <rcook@wyrms.net>
+	* CONFIGURE: added additional configure options
+	* DEPENDS: added additional optional depends
+
 2013-06-24 Ladislav Hagara <hgr@vabo.cz>
 	* CONFLICTS: claws-mail-extra-plugins added, part of claws-mail now
 
