tbb: adde -f to link command

--- a/libs/tbb/INSTALL
+++ b/libs/tbb/INSTALL
@@ -3,7 +3,7 @@ cd $SOURCE_DIRECTORY &&
 for foo in $(find -executable -type f); do
   bar=$(basename $foo)
   cp $foo ${INSTALL_ROOT}/usr/lib/$bar &&
-  ln -s ${INSTALL_ROOT}/usr/lib/$bar ${INSTALL_ROOT}/usr/lib/$(expr match "${bar}" '\([a-z_]*\.so\)')
+  ln -sf ${INSTALL_ROOT}/usr/lib/$bar ${INSTALL_ROOT}/usr/lib/$(expr match "${bar}" '\([a-z_]*\.so\)')
 done &&
 
 #install the include files
