--- a/database/sqlite/HISTORY
+++ b/database/sqlite/HISTORY
@@ -1,3 +1,6 @@
+2013-09-04 Treeve Jelbert <treeve@sourcemage.org>
+	* DETAILS: version 3.8.0.2
+
 2013-05-20 Vlad Glagolev <stealth@sourcemage.org>
 	* DETAILS: updated spell to 3.7.17
 
