kernels/linux: version 3.11

--- a/kernels/linux/HISTORY
+++ b/kernels/linux/HISTORY
@@ -1,3 +1,8 @@
+2013-09-04 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
+	* latest.defaults: LATEST_maintenance_patches_3=3.11, LATEST_3=3.11
+	* info/kernels/3.11: added
+	* info/patches/maintenance_patches_3/patch-3.11: added
+
 2013-08-29 Florian Franzmann <siflfran@hawo.stw.uni-erlangen.de>
 	* info/patches/maintenance_patches_3/patch-3.10.10: added
 	* latest_defaults: version 3.10.10
