Spell Deprecation: amap
After this spell was created it was found to already exist under
a similar name, thc-amap. As the duplicate spell was pushed to the
repository, a deprecation was created and the duplicate spell will
be removed after an appropriate amount of time has passed, currently
about two weeks.

Quill was used to setup the deprecation. Besides the minute update
to the HISTORY file, no other changed have been made against quill's
setup.

--- a/net/amap/HISTORY
+++ b/net/amap/HISTORY
@@ -1,3 +1,8 @@
+2013-09-04 David C. Haley <khoralin@gmail.com>
+	* Spell deprecated. Deprecating in favor of original spell.
+	* PATCHLEVEL=9999
+	* DETAILS: version 0
+
 2013-08-29 David C. Haley <khoralin@gmail.com>
 	* DETAILS: spell created
 
