qemu: Optionally depends on nss *SUB_DEPENDS: Allow forcing dependency on nss

--- a/utils/qemu/HISTORY
+++ b/utils/qemu/HISTORY
@@ -1,3 +1,7 @@
+2013-09-04 Eric Sandall <sandalle@sourcemage.org>
+	* DEPENDS: Optionally depends on nss
+	* *SUB_DEPENDS: Allow forcing dependency on nss
+
 2013-08-13 Eric Sandall <sandalle@sourcemage.org>
 	* DETAILS: Updated to 1.5.2
 	* CONFIGURE: sb16, cs4231a, adlib, and gus sound cards removed
